[package]
name = "nft-staking-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "~1.8.14"
borsh = "0.10.3"
thiserror = "1.0.44"

[lib]
crate-type = ["cdylib", "lib"]
